--- a/src/it/unina/foodlab/ui/Corsi.fxml
+++ b/src/it/unina/foodlab/ui/Corsi.fxml
@@ -7,7 +7,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
             fx:controller="it.unina.foodlab.controller.CorsiPanelController"
-            stylesheets="@/app.css" prefWidth="1000" prefHeight="640" fx:id="mainPane">
+            prefWidth="1000" prefHeight="640" fx:id="mainPane">
 
     <!-- ============== SIDEBAR SINISTRA ============== -->
     <left>
